# robot-europa

./: .gitmodules  setup.sh
camera-cal/camera_ethernet_imx219/: foo.json  foo2.json  keypoints.csv
catkin_ws/src/local_mapper/: .camera_ethernet_imx291.json.swp  .ipm.py.swp  CMakeLists.txt  package.xml
catkin_ws/src/local_mapper/nodes/: .ground_project_node.swp  .ipm.py.swp  autopilot_2_node  autopilot_node  camera_ethernet_imx291.json  camera_ethernet_imx291_2.json  cv_bridge.py  ground_project_node  ipm.py  local_mapper_cumulative_node  local_mapper_node  local_mapper_singleshot_node  numpy_extra.py  test.py  transformations.py
catkin_ws/src/shutdown/: CMakeLists.txt  package.xml
catkin_ws/src/sound/: CMakeLists.txt  package.xml
design/: camera-ar0331-mount.scad  camera-ar0331-mount.stl  camera-armcrest-mount-c.scad  camera-armcrest-mount-c.stl  camera-armcrest-mount-insert.scad  camera-armcrest-mount-insert.stl  camera-armcrest-mount.scad  camera-armcrest-mount.stl  hubadapter.scad  hubadapter.stl  jig-split.scad  jig-split.stl  jig-washer.scad  jig-washer.stl  sprocket-35-split-37.scad  sprocket-35-split-37.stl  sprocketadapter.scad  sprocketadapter.stl  sprockets.scad  steering-gear-column.scad  steering-gear-column.stl  steering-gear-motor.scad
devtools/: steering_angle_plot.py
system/: apt-installs-2.txt  apt-installs.txt  install-pip.sh  install-pytorch.sh  install-root.sh  install-ros.sh  install-tensorflow.sh  pip-install.txt  pip-installs.txt
system/install-xavier/: install-pytorch.sh  install-ros.sh  install-tensorflow.sh
(+36 files in other folders)
